[project]
name = ""
version = ""
description = ""
authors = [{ name = "MRDGH2821", email = "mihirrabade@gmail.com" }]
dependencies = ["numpy>=1.22.3", "opencv-python>=4.5.5.64"]
requires-python = ">=3.8"
license = { text = "MIT" }

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
perform_edge = "python Edge_Segmentation.py"
